--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
                     <p>Клиенты</p>
                     <p>Контакты</p>
                 </div>
+
                 <div class="consultation">
                     <div class="cont">
                         <p>Проконсултироваться</p>
                     </div>
                 </div>
             </div>
+            <div class="dropdown-menu-container"></div>
+
             <div class="doun_menu">
                 <p>Искуственный <br> интелект</p>
                 <p>Машинное <br> обучение</p>
